# remote-claude-code

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: claude-stop-hooks.json
.claude-plugin/: marketplace.json
.claude-plugin/plugins/remote-claude-code-setup/: README.md
.claude-plugin/plugins/remote-claude-code-setup/.claude/skills/remote-claude-code-setup-wizard/: SKILL.md
.claude/hooks/: claude-stop-hook.mjs  claude-stop-hook.test.mjs
.claude/skills/remote-claude-code-setup-wizard/: SKILL.md
.omc/: project-memory.json
.omc/state/: agent-replay-74eb8300-e443-4c68-9862-c408c0acd18b.jsonl  hud-stdin-cache.json  last-tool-error.json
.omc/state/sessions/74eb8300-e443-4c68-9862-c408c0acd18b/: hud-state.json
crates/app/: Cargo.toml
crates/app/src/: lib.rs  locale.rs  main.rs  service.rs  setup.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: lib.rs
crates/core-service/: Cargo.toml
crates/core-service/src/: lib.rs
crates/policy/: Cargo.toml
crates/runtime-local/: Cargo.toml
crates/runtime-local/src/: lib.rs
crates/session-store/: Cargo.toml
crates/session-store/src/: lib.rs
crates/transport-slack/: Cargo.toml
crates/transport-slack/src/: lib.rs
docs/: manual-smoke-test.md  slack-setup.md
docs/superpowers/plans/: 2026-04-15-interactive-setup-implementation.md
docs/superpowers/specs/: 2026-04-15-interactive-setup-design.md  2026-04-15-open-source-launch-design.md  2026-04-16-setup-hardening-design.md
slack/: app-manifest.json
