[workspace]
members = [
  "crates/application",
  "crates/app",
  "crates/core-model",
  "crates/core-service",
  "crates/policy",
  "crates/runtime-local",
  "crates/session-store",
  "crates/transport-slack",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["mskangg"]
repository = "https://github.com/mskangg/oh-my-remote-ai"
description = "Control Claude Code, Codex, and Gemini from Slack — anywhere, any device"

[workspace.lints.rust]
future-incompatible = "warn"
nonstandard_style = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
redundant_clone = { level = "warn", priority = 5 }
needless_collect = { level = "warn", priority = 5 }
large_enum_variant = { level = "warn", priority = 5 }
clone_on_copy = { level = "warn", priority = 5 }

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"
