[package]
name = "rcc"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
application = { path = "../application" }
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json = "1"
core-model = { path = "../core-model" }
core-service = { path = "../core-service" }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_urlencoded = "0.7"
runtime-local = { path = "../runtime-local" }
session-store = { path = "../session-store" }
transport-slack = { path = "../transport-slack" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
