[package]
name = "runtime-local"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
core-model = { path = "../core-model" }
core-service = { path = "../core-service" }
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
